[package]
name = "lend_protocol"
version = "0.1.0"
authors = ["AzoyaLabs <William@AzoyaLabs.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = { version = "1.5.0", features = ["staking", "stargate"] }
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
erased-serde = "0.3.23"
thiserror = { version = "1.0.31" }
# proto_injective = { path="../proto_injective" }
injective-std = "0.1.3"

injective-cosmwasm = { path="./packages/injective-cosmwasm" }
injective-math = { path="./packages/injective-math" }
anyhow = "1.0.75"




[dev-dependencies]
anyhow = "1.0.75"
cw-multi-test = {path="./cw-multi-test"}  # "0.17.0"
#robot_code_gen = {git="https://github.com/Azoyalabs/RobotCodeGen"}

[build-dependencies]
#robot_code_gen = {git="https://github.com/Azoyalabs/RobotCodeGen"}
